# my_first_goat

./: .gitignore  HISTORY.rst  LICENSE  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.py
my_first_goat/: __main__.py  bot.py
my_first_goat/data/: config_template.toml  config_template_private.toml
